tests-integration/fixtures/checking/1772565240_derive_bifunctor_missing_functor/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
WrapBoth ::
  forall (t5 :: Type) (t4 :: Type) (@f :: (t5 :: Type) -> Type) (@g :: (t4 :: Type) -> Type)
    (@a :: (t5 :: Type)) (@b :: (t4 :: Type)).
    (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)) ->
    (g :: (t4 :: Type) -> Type) (b :: (t4 :: Type)) ->
    WrapBoth @(t5 :: Type) @(t4 :: Type)
      (f :: (t5 :: Type) -> Type)
      (g :: (t4 :: Type) -> Type)
      (a :: (t5 :: Type))
      (b :: (t4 :: Type))

Types
WrapBoth ::
  forall (t5 :: Type) (t4 :: Type).
    ((t5 :: Type) -> Type) -> ((t4 :: Type) -> Type) -> (t5 :: Type) -> (t4 :: Type) -> Type

Derived
derive forall (t6 :: Type -> Type) (t7 :: Type -> Type).
  Bifunctor (WrapBoth @Type @Type (t6 :: Type -> Type) (t7 :: Type -> Type))

Roles
WrapBoth = [Representational, Representational, Nominal, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (t6 :: Type -> Type)
  --> 6:1..6:41
  |
6 | derive instance Bifunctor (WrapBoth f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Functor (t7 :: Type -> Type)
  --> 6:1..6:41
  |
6 | derive instance Bifunctor (WrapBoth f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
